--- a/UI/html/index.html
+++ b/UI/html/index.html
@@ -1,3 +1,114 @@
-<html>
-  <p>We love you</p>
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>umuhizi</title>
+  </head>
+  <body>
+   <div class="container-fluid">
+   		<div class="row">
+   			<div class="col-lg-12 shadow-sm p-3 mb-5 bg-black">
+   				<div class="row">
+   					<div class="col-lg-10">
+   						<h3><img src="../image/" alt="" style="width: 70px; height: 50px;"></h3>
+   					</div>
+   					<div class="col-lg-2">
+   						HELP
+   						<button class="btn btn-default">MENU
+   						</button>
+   					</div>
+   				</div>
+
+   			</div>
+			   <div class="col-lg-12"  style="background-image: url('../image/apa.png');padding: none;">
+   				<div class="container-fluid" style="background:linear-gradient(to left,#07295fd5 100%,CD DE #04905b 0%); opacity: 0.9;
+			    width: 100%;margin-top: -48px;height: 100vh;padding:40px;">
+   				<div class="row">
+   					<div class="col-lg-6 padding">
+   						<h1 style="color: white;">Driving paperless</h1><br><br>
+							   <p style="color: white;font-size: 25px">
+								With UMUZI card you can buy motor-vehicle insurance,
+								the police will have access to your control technique,
+								driving license. It's one card for your motor-vehicle.
+								You can keep track of the motor-vehicle service record
+								and car ownership records.<br>
+   					</div>
+   					<div class="col-lg-6">
+   						<img src="../image/creditcardmockup.png" style="width: 600px">
+   						<img src="../image/Umuzi_mockup.png" style="width: 500px;margin-top: -300px; height: 400px; margin-right: -390px">
+   					</div>
+   				</div>
+   				</div>
+   			</div>
+   			
+   			<div class="col-lg-12" style="background-image: url('../image/4941.jpg');padding: none">
+   				<div class="#">
+   					<div class="row">
+   						<div class="col-lg-6 text-center" style="padding: 10px">
+   							<img src="../image/Car_Insurence-04.png" style="width: 100px">
+   							<br>
+   							<h3 class="text-success">Car insurance</h3>
+   						</div>
+   						<div class="col-lg-6 text-center" style="padding: 20px">
+   							<img src="../image/Car_Control_technique-06.png" style="width: 100px">
+   							<br>
+   							<h3 class="text-success">Controle Technique</h3>
+   						</div>
+   						<div class="col-lg-6 text-center" style="padding: 20px">
+   							<img src="../image/Car_logbook.png" style="width: 100px">
+   							<br>
+   							<h3 class="text-success">Car logbook</h3>
+   						</div>
+   						<div class="col-lg-6 text-center" style="padding: 20px">
+   							<img src="../image/Parking.png" style="width: 100px">
+   							<br>
+   							<h3 class="text-success">Cashless Parking</h3>
+   						</div>
+   						<div class="col-lg-6" style="width: 100vh;padding: 50px">
+							   <h1 style="color: rgba(0, 151, 0, 0.787)">Download UMUZI app<br>--------------------------</h1>
+   							<p style="color: rgb(255, 255, 255);">
+   								With UMUZI card you can buy motor-vehicle insurance,
+   								the police will have access to your control technique,
+   								driving license. It's one card for your motor-vehicle.
+   								You can keep track of the motor-vehicle service record
+   								and car ownership records.<br>
+   							</p><br><br>
+
+							<img src="../image/AppStore.png" style="width: 200px; height: 60px; border-radius: 10px;">
+							<img src="../image/GooglePlay.png" style="width: 200px; height: 60px; border-radius: 10px;">
+   					</div>
+   					<div class="col-lg-6">
+   						<img src="../image/App.png" width="300px">
+   					</div>
+   				</div>
+   			
+   		</div>
+
+		<div class="col-lg-12" style="padding: ;font-size: 25px">
+			<div class="row" style="align-items: center;">
+				<div class="col-lg-4">
+			<i>© Copyright Umuzi 2020</i>
+				</div>
+				<div class="col-lg-4">
+			<i>site map</i>
+				</div>
+				<div class="col-lg-4">
+			<i>terms of use</i>
+				</div>
+		</div>
+		</div>
+		</div>
+   </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
 </html>
